// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`FAQ > should work with default props 1`] = `
<DocumentFragment>
  .emotion-1 {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
  padding: 16px;
  text-align: left;
}

.emotion-1[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-1[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 emotion-2"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <div />
        <div>
          <p
            class="emotion-5 emotion-6"
          >
            Title
          </p>
          <div
            class="emotion-7 emotion-6"
          >
            Description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FAQ > should work with illustrationTest 1`] = `
<DocumentFragment>
  .emotion-1 {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
  padding: 16px;
  text-align: left;
}

.emotion-1[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-1[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  border-radius: 100%;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #641cb3;
  background: #f1eefc;
  border: 1px solid #f1eefc;
  width: 32px;
  height: 32px;
  font-size: 16px;
}

.emotion-7 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 emotion-2"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <div>
          <div
            class="emotion-5 emotion-6"
          >
            1
          </div>
        </div>
        <div>
          <p
            class="emotion-7 emotion-8"
          >
            Title
          </p>
          <div
            class="emotion-9 emotion-8"
          >
            Description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FAQ > should work with notes 1`] = `
<DocumentFragment>
  .emotion-1 {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
  padding: 16px;
  text-align: left;
}

.emotion-1[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-1[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-9 {
  font-size: 12px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-style: italic;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 emotion-2"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <div />
        <div>
          <p
            class="emotion-5 emotion-6"
          >
            Title
          </p>
          <div
            class="emotion-7 emotion-6"
          >
            Description
            <small
              class="emotion-9 emotion-6"
            >
              Notes
            </small>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FAQ > should work with productIconName 1`] = `
<DocumentFragment>
  .emotion-1 {
  border: 1px solid #d9dadd;
  border-radius: 4px;
  padding: 24px;
  padding: 16px;
  text-align: left;
}

.emotion-1[data-is-active='true'] {
  border: 1px solid #8c40ef;
}

.emotion-1[data-disabled='true'] {
  border: 1px solid #e9eaeb;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 16px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.emotion-5 {
  font-size: 16px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 600;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-7 {
  font-size: 14px;
  font-family: Inter,Asap,sans-serif;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    data-testid="testing"
  >
    <div
      class="emotion-0 emotion-1 emotion-2"
      data-disabled="false"
      data-is-active="false"
    >
      <div
        class="emotion-3 emotion-4"
      >
        <div />
        <div>
          <p
            class="emotion-5 emotion-6"
          >
            Title
          </p>
          <div
            class="emotion-7 emotion-6"
          >
            Description
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
